--- a/daw/sistemas/indiceSistemas.html
+++ b/daw/sistemas/indiceSistemas.html
@@ -21,69 +21,95 @@
     </header>
     <main>
         <section class="temaIndice">
-            <span>1.- Introducción a la programación</span>
+            <span>1.- Instalación software libre y propietario</span>
             <ul>
-                <li><a href="#1.1">Representaciones gráficas</a></li>
-                <li><a href="#1.2">Características de los diagramas de flujo</a></li>
-                <li><a href="#1.3">Características del pseudocódigo</a></li>
-                <li><a href="#1.4">Comunicación de un sistema informático</a></li>
-                <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
-                <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
-                <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
+              <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
+              <li><a href="#1.2">Tipos y topologías de red</a></li>
+              <li><a href="#1.3">Mapa físico y lógico de una red</a></li>
+              <li><a href="#1.4">Arquitectura de un sitema operativo</a></li>
+              <li><a href="#1.5">Funciones del sistema operativo</a></li>
+              <li><a href="#1.6">Tipos de sistemas operativos</a></li>
+              <li><a href="#1.7">Tipos de aplicaciones</a></li>
+              <li><a href="#1.8">Licencias y tipos de licencias</a></li>
+              <li><a href="#1.9">Gestores de arranque</a></li>
+              <li><a href="#1.10">Máquinas virtuales</a></li>
+              <li><a href="#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
+              <li><a href="#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
+              <li><a href="#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
+              <li><a href="#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
+              <li><a href="#1.15">Archivos de inicio de sistemas operativos</a></li>
+              <li><a href="#1.16">Registro del sistema</a></li>
+              <li><a href="#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
             </ul>
         </section>
         <section class="temaIndice">
-            <span>2.- Estructura de un programa informático</span>
+            <span>2.- Administración de software base</span>
             <ul>
-                <li><a href="#2.1">Bloques de un programa de código</a></li>
-                <li><a href="#2.2">Variables. Usos y tipos</a></li>
-                <li><a href="#2.3">Constantes y literales. Tipos y utilidades</a></li>
-                <li><a href="#2.4">Operadores del lenguaje de programación</a></li>
-                <li><a href="#2.5">Conversiones de tipos de clase</a></li>
-                <li><a href="#2.6">Comentarios al código</a></li>
+              <li><a href="#2.1">Administración de usuarios y grupos locales</a></li>
+              <li><a href="#2.2">Seguridad de cuentas de usuario</a></li>
+              <li><a href="#2.3">Seguridad de contraseñas</a></li>
+              <li><a href="#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
+              <li><a href="#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
+              <li><a href="#2.6">Archivos de configuración de red</a></li>
+              <li><a href="#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
+              <li><a href="#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
             </ul>
         </section>
         <section class="temaIndice">
-            <span>3.- Programación Estructurada</span>
+            <span>3.- Administración de la información</span>
             <ul>
-                <li><a href="#3.1">Fundamentos de programación</a></li>
-                <li><a href="#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
-                <li><a href="#3.3">Ciclo de vida de un proyecto software</a></li>
-                <li><a href="#3.4">Prueba de programas</a></li>
-                <li><a href="#3.5">Tipos de datos: Simples y compuestos</a></li>
-                <li><a href="#3.6">Estructuras de selección (Condicionales)</a></li>
-                <li><a href="#3.7">Estructuras de repetición</a></li>
-                <li><a href="#3.8">Estructuras de salto</a></li>
-                <li><a href="#3.9">Tratamiento de cadenas</a></li>
-                <li><a href="#3.10">Depuración de errores</a></li>
-                <li><a href="#3.11">Documentación de programas</a></li>
-                <li><a href="#3.12">Entornos de desarrollo de programas</a></li>
+              <li><a href="#3.1">Sistemas de archivos</a></li>
+              <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
+              <li><a href="#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
+              <li><a href="#3.4">Gestión de enlaces</a></li>
+              <li><a href="#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
+              <li><a href="#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
+              <li><a href="#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
+              <li><a href="#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
+              <li><a href="#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
+              <li><a href="#3.10">Automatización</a></li>
+              <li><a href="#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
             </ul>
         </section>
         <section class="temaIndice">
-            <span>4.- Programación Modular</span>
+            <span>4.- Administración de dominios</span>
             <ul>
-                <li><a href="#4.1">Concepto</a></li>
-                <li><a href="#4.2">Ventajas e inconvenientes</a></li>
-                <li><a href="#4.3">Análisis descendente (top down)</a></li>
-                <li><a href="#4.4">Modulación de programas. Subprogramas</a></li>
-                <li><a href="#4.5">Llamadas a funciones (métodos). Tipos y funcionamiento</a></li>
-                <li><a href="#4.6">Ámbito de las llamadas a funciones</a></li>
-                <li><a href="#4.7">Prueba, depuración y comentario de programas</a></li>
-                <li><a href="#4.8">Concepto de librerías</a></li>
-                <li><a href="#4.9">Uso de librerías</a></li>
-                <li><a href="#4.10">Introducción al concepto de recursividad</a></li>
+              <li><a href="#4.1">Estructura cliente-servidor</a></li>
+              <li><a href="#4.2">Protocolo LDAP</a></li>
+              <li><a href="#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
+              <li><a href="#4.4">Conceptos clave de Active Directory</a></li>
+              <li><a href="#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
+              <li><a href="#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
+              <li><a href="#4.7">Perfiles móviles y obligatorios</a></li>
+              <li><a href="#4.8">Carpetas personales</a></li>
+              <li><a href="#4.9">Plantillas de usuario. Variables de entorno</a></li>
+              <li><a href="#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
+              <li><a href="#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
             </ul>
         </section>
         <section class="temaIndice">
-            <span>5.- Gestión de ficheros</span>
+            <span>5.- Administración del acceso al dominio</span>
             <ul>
-                <li><a href="#5.1">Concepto y tipos de ficheros</a></li>
-                <li><a href="#5.2">Diseño y modulación de las operaciones sobre ficheros</a></li>
-                <li><a href="#5.3">Operaciones sobre ficheros secuenciales</a></li>
-                <li><a href="#5.4">Control de excepciones</a></li>
+              <li><a href="#5.1">Equipos de dominio</a></li>
+              <li><a href="#5.2">Permisos y derechos</a></li>
+              <li><a href="#5.3">Administración del acceso a recursos. Samba. NFS</a></li>
+              <li><a href="#5.4">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
+              <li><a href="#5.5">Delegación de permisos</a></li>
+              <li><a href="#5.6">Listas de control de acceso(ACL Access Control List)</a></li>
+              <li><a href="#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
             </ul>
         </section>
+        <section class="temaIndice">
+          <span>6.- Resolución de incidencias y asistencia técnica</span>
+          <ul>
+            <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
+            <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
+            <li><a href="#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
+            <li><a href="#6.4">Servidores de actualizaciones automáticas</a></li>
+            <li><a href="#6.5">Partes de incidencias y protocolos de actuación</a></li>
+            <li><a href="#6.6">Administración remota</a></li>
+          </ul>
+      </section>
     </main>
 </body>
 </html>
