--- a/daw/Len_Marcas/lenMarCuatro.html
+++ b/daw/Len_Marcas/lenMarCuatro.html
@@ -23,12 +23,36 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">4</div>
+                <h2>Aplicación de los lenguajes de marcas a la sindicación de contenidos</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="cuatroUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Ámbitos de aplicación</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroDos">
+                <a href=""></a>
+                <h3>Estructura de los canales de contenidos</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroTres">
+                <a href=""></a>
+                <h3>Elementos principales de un RSS</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroCuatro">
+                <a href=""></a>
+                <h3>Tecnologías de creación de canales de contenidos</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroCinco">
+                <a href=""></a>
+                <h3>Validación y publicación</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroSeis">
+                <a href=""></a>
+                <h3>Directorios de canales de contenidos</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroSiete">
+                <a href=""></a>
+                <h3>Agregación</h3>
             </article>
         </section>
     </body>
