--- a/daw/Len_Marcas/lenMarSeis.html
+++ b/daw/Len_Marcas/lenMarSeis.html
@@ -23,12 +23,28 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">6</div>
+                <h2>Gestión y almacenamiento de información de XML</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="seisUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Sistemas de almacenamiento de información XML. Tecnologías</h3>
+            </article>
+            <article class="articuloApuntes" id="seisDos">
+                <a href=""></a>
+                <h3>Bases de datos relacionales con XML. Inserción de información</h3>
+            </article>
+            <article class="articuloApuntes" id="seisTres">
+                <a href=""></a>
+                <h3>Técnicas de búsqueda de información en documentos XML</h3>
+            </article>
+            <article class="articuloApuntes" id="seisCuatro">
+                <a href=""></a>
+                <h3>Lenguajes de consulta, extracción y manipulación de la información en XML. XPath. XQuery</h3>
+            </article>
+            <article class="articuloApuntes" id="seisCinco">
+                <a href=""></a>
+                <h3>Sistemas gestores de bases de datos nativos XML. Herramientas para el tratamiento y almacenamiento de la información en XML</h3>
             </article>
         </section>
     </body>
