--- a/daw/Len_Marcas/lenMarSiete.html
+++ b/daw/Len_Marcas/lenMarSiete.html
@@ -23,12 +23,36 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">7</div>
+                <h2>Sistema de gestión empresarial</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="sieteUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Inteligencia del negocio</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteDos">
+                <a href=""></a>
+                <h3>Sistemas de Gestión de recursos empresariales (ERP). SAP. Odoo</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteTres">
+                <a href=""></a>
+                <h3>Software de gestión de relaciones con los clientes (CRM)</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteCuatro">
+                <a href=""></a>
+                <h3>Instalación de un sistema de gestión empresarial</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteCinco">
+                <a href=""></a>
+                <h3>Adaptación y configuración de un ERP. Integración de módulos</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteSeis">
+                <a href=""></a>
+                <h3>Elaboración de informes</h3>
+            </article>
+            <article class="articuloApuntes" id="sieteSiete">
+                <a href=""></a>
+                <h3>Integración con aplicaciones ofimáticas. Exportación de la información</h3>
             </article>
         </section>
     </body>
