--- a/daw/bdUno/bdUnoSeis.html
+++ b/daw/bdUno/bdUnoSeis.html
@@ -23,10 +23,38 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">6</div>
+                <h2>Estrategias para el control de las transacciones y de la concurrencia</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="seisUno">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisDos">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisTres">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisCuatro">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisCinco">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisSeis">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisSiete">
+                <a href=""></a>
+                <h3>Título Apartado</h3>
+            </article>
+            <article class="articuloApuntes" id="seisOcho">
                 <a href=""></a>
                 <h3>Título Apartado</h3>
             </article>
