--- a/daw/bdUno/bdUnoCuatro.html
+++ b/daw/bdUno/bdUnoCuatro.html
@@ -23,12 +23,40 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">4</div>
+                <h2>Normalización</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="cuatroUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Concepto de normalización, dependencias funcionales y sus tipos</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroDos">
+                <a href=""></a>
+                <h3>Las formas normales</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroTres">
+                <a href=""></a>
+                <h3>Primera forma normal</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroCuatro">
+                <a href=""></a>
+                <h3>Segunda forma normal</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroCinco">
+                <a href=""></a>
+                <h3>Tercera forma normal</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroSeis">
+                <a href=""></a>
+                <h3>Forma normal Boyce-Codd</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroSiete">
+                <a href=""></a>
+                <h3>Otras formas normales</h3>
+            </article>
+            <article class="articuloApuntes" id="cuatroOcho">
+                <a href=""></a>
+                <h3>Desnormalización</h3>
             </article>
         </section>
     </body>
