--- a/daw/bdUno/bdUnoSiete.html
+++ b/daw/bdUno/bdUnoSiete.html
@@ -23,12 +23,12 @@
         <section class="tema">
             <div class="tituloTema">
                 <a href=""></a>
-                <div class="numeroTema"></div>
-                <h2>Título Tema</h2>
+                <div class="numeroTema">7</div>
+                <h2>Lenguajes de las BBDD para la creación de su estructura</h2>
             </div>
-            <article class="articuloApuntes">
+            <article class="articuloApuntes" id="sieteUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Visitas y otras extensiones del lenguaje</h3>
             </article>
         </section>
     </body>
