--- a/daw/bdUno/bdUnoTres.html
+++ b/daw/bdUno/bdUnoTres.html
@@ -28,31 +28,31 @@
             </div>
             <article class="articuloApuntes" id="tresUno">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Terminología del modelo relacional</h3>
             </article>
             <article class="articuloApuntes" id="tresDos">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Concepto de relación. Propiedades y relaciones</h3>
             </article>
             <article class="articuloApuntes" id="tresTres">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Atributos y dominio de los atributos</h3>
             </article>
             <article class="articuloApuntes" id="tresCuatro">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Concepto y tipos de clave: candidatas, primarias, ajenas, alternativas</h3>
             </article>
             <article class="articuloApuntes" id="tresCinco">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Valores nulos</h3>
             </article>
             <article class="articuloApuntes" id="tresSeis">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Reglas de integridad: de entidad y referencial</h3>
             </article>
             <article class="articuloApuntes" id="tresSiete">
                 <a href=""></a>
-                <h3>Título Apartado</h3>
+                <h3>Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</h3>
             </article>
         </section>
     </body>
