--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/mediaQ.css">
     <title>Nuevo Portfolio 2022</title>
   </head>
-  <body class="portfolio">
-    <div class="contenedorPortfolio">
+  <body>
+    <main class="main--Principal">
       <section class="presentacion">
         <span>SapheryDesings</span>
       </section>
@@ -199,6 +199,6 @@
       <section><h3 class="tituloSeccion">Proyectos</h3></section>
       <section class="proyectos">
       </section> -->
-    </div>
+    </main>
   </body>
 </html>
