--- a/daw/Len_Marcas/indiceLen_Marcas.html
+++ b/daw/Len_Marcas/indiceLen_Marcas.html
@@ -12,14 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Lenguajes de Marcas</title>
 </head>
-<body class="indice">
+<body>
     <header>
         <div class="navtop">
           <span>Lenguajes de Marcas</span>
           <a href="../../index.html">Principal</a>
         </div>
     </header>
-    <main>
+    <main class="main--Indice">
         <section class="temaIndice">
             <span>1.- Reconocimiento de las características de los lenguajes de marca</span>
             <ul>
