--- a/daw/sistemas/indiceSistemas.html
+++ b/daw/sistemas/indiceSistemas.html
@@ -12,14 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
-<body class="indice">
+<body>
     <header>
         <div class="navtop">
           <span>Sistemas Informáticos</span>
           <a href="../../index.html">Principal</a>
         </div>
     </header>
-    <main>
+    <main class="main--Indice">
         <section class="temaIndice">
             <span>1.- Instalación software libre y propietario</span>
             <ul>
