--- a/daw/sistemas/sistemasSeis.html
+++ b/daw/sistemas/sistemasSeis.html
@@ -12,30 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Sistemas Informáticos</span>
-      <!--NUEVO MENU-->
-      <nav>
-        <ul class="navHorizontal">
-          <li>
-            <a href="../../index.html">Principal</a>
-            <ul class="navVertical">
-              <li><a href="./sistemInfor.html">Tema 1</a></li>
-              <li><a href="./temaDos.html">Tema 2</a></li>
-              <li><a href="./temaTres.html">Tema 3</a></li>
-              <li><a href="./temaCuatro.html">Tema 4</a></li>
-              <li><a href="./temaCinco.html">Tema 5</a></li>
-              <li><a href="./temaSeis.html">Tema 6</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <!--*************************************************************-->
+  <main class="main--Apuntes">
   <div class="tituloTema">
     <h1>Tema 6.- Resolución de incidencias y asistencia técnica</h1>
   </div>
@@ -78,19 +62,6 @@
       <h3 class="subTitulo_3">Administración remota</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
-  </section>
+  </main>
 </body>
-</html> 
-
-<!--
-  <div class="indice">
-      <ol>
-        <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
-        <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
-        <li><a href="#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
-        <li><a href="#6.4">Servidores de actualizaciones automáticas</a></li>
-        <li><a href="#6.5">Partes de incidencias y protocolos de actuación</a></li>
-        <li><a href="#6.6">Administración remota</a></li>
-      </ol>
-    </div>
--->
+</html>
