--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -12,31 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Sistemas Informáticos</span>
-      <!--NUEVO MENU-->
-      <nav>
-        <ul class="navHorizontal">
-          <li>
-            <a href="../../index.html">Principal</a>
-            <ul class="navVertical">
-              <li><a href="./sistemInfor.html">Tema 1</a></li>
-              <li><a href="./temaDos.html">Tema 2</a></li>
-              <li><a href="./temaTres.html">Tema 3</a></li>
-              <li><a href="./temaCuatro.html">Tema 4</a></li>
-              <li><a href="./temaCinco.html">Tema 5</a></li>
-              <li><a href="./temaSeis.html">Tema 6</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <!--*************************************************************-->
-  <section class="tema">
+  <main class="main--Apuntes">
     <div class="tituloTema">
       <h1>Tema 1.- Instalación software libre y propietario</h1>
     </div>
@@ -357,30 +340,6 @@
       
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
-  </section>
+  </main>
 </body>
-</html> 
-
-<!--
-    <div class="indice">
-      <ol>
-        <li><a href="#1.1">Estructura y componentes de un sistema informático. Periféricos y adaptadores para la conexion de dispositivos</a></li>
-        <li><a href="#1.2">Tipos y topologías de red</a></li>
-        <li><a href="#1.3">Mapa físico y lógico de una red</a></li>
-        <li><a href="#1.4">Arquitectura de un sitema operativo</a></li>
-        <li><a href="#1.5">Funciones del sistema operativo</a></li>
-        <li><a href="#1.6">Tipos de sistemas operativos</a></li>
-        <li><a href="#1.7">Tipos de aplicaciones</a></li>
-        <li><a href="#1.8">Licencias y tipos de licencias</a></li>
-        <li><a href="#1.9">Gestores de arranque</a></li>
-        <li><a href="#1.10">Máquinas virtuales</a></li>
-        <li><a href="#1.11">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</a></li>
-        <li><a href="#1.12">Instalación de sistemas operativos. Requisitos, versiones y licencias</a></li>
-        <li><a href="#1.13">Instalación y desinstalación de aplicaciones. Requisitos, versiones y licencias</a></li>
-        <li><a href="#1.14">Actualización de sistemas operativos y aplicaciones</a></li>
-        <li><a href="#1.15">Archivos de inicio de sistemas operativos</a></li>
-        <li><a href="#1.16">Registro del sistema</a></li>
-        <li><a href="#1.17">Actualización y mantenimiento de controladores de dispositivos</a></li>
-      </ol>
-    </div>
-    -->
+</html>
