--- a/daw/sistemas/sistemasCinco.html
+++ b/daw/sistemas/sistemasCinco.html
@@ -12,92 +12,55 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Sistemas Informáticos</span>
-      <!--NUEVO MENU-->
-      <nav>
-        <ul class="navHorizontal">
-          <li>
-            <a href="../../index.html">Principal</a>
-            <ul class="navVertical">
-              <li><a href="./sistemInfor.html">Tema 1</a></li>
-              <li><a href="./temaDos.html">Tema 2</a></li>
-              <li><a href="./temaTres.html">Tema 3</a></li>
-              <li><a href="./temaCuatro.html">Tema 4</a></li>
-              <li><a href="./temaCinco.html">Tema 5</a></li>
-              <li><a href="./temaSeis.html">Tema 6</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <!--*************************************************************-->
-  <div class="tituloTema">
-    <h1>Tema 5.- Administración del acceso al dominio</h1>
-  </div>
-      <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Introducción</h3>
-      </article>
-  <!--*************************************************************-->
-  <a name="5.1"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Equipos de dominio</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.2"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Permisos y derechos</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.3"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Administración del acceso a recursos. Samba. NFS</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.4"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.5"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Delegación de permisos</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.6"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Listas de control de acceso (ACL Access Control List)</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  <!--*************************************************************-->
-  <a name="5.7"></a>
-    <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
-      <a class="btnArriba" href="#top">Arriba</a>
-    </article>
-  </section>
-</body>
-</html> 
-
-<!--
-  <div class="indice">
-      <ol>
-        <li><a href="#5.1">Equipos de dominio</a></li>
-        <li><a href="#5.2">Permisos y derechos</a></li>
-        <li><a href="#5.3">Administración del acceso a recursos. Samba. NFS</a></li>
-        <li><a href="#5.4">Permisos de red. Permisos locales. Herencia. Permisos efectivos</a></li>
-        <li><a href="#5.5">Delegación de permisos</a></li>
-        <li><a href="#5.6">Listas de control de acceso(ACL Access Control List)</a></li>
-        <li><a href="#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
-      </ol>
+  <main class="main--Apuntes">
+    <div class="tituloTema">
+      <h1>Tema 5.- Administración del acceso al dominio</h1>
     </div>
--->
+        <article class="articuloApuntes">
+          <h3 class="subTitulo_3">Introducción</h3>
+        </article>
+    <a name="5.1"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Equipos de dominio</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.2"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Permisos y derechos</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.3"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Administración del acceso a recursos. Samba. NFS</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.4"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.5"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Delegación de permisos</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.6"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Listas de control de acceso (ACL Access Control List)</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+    <a name="5.7"></a>
+      <article class="articuloApuntes">
+        <h3 class="subTitulo_3">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
+        <a class="btnArriba" href="#top">Arriba</a>
+      </article>
+  </main>
+</body>
+</html>
