--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -12,34 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación I</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Programación I</span>
-      <span><a href="../../index.html">Principal</a></span>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./programUno.html">Tema 1</a>
-      <a href="./proDos.html">Tema 2</a>
-      <a href="./proTres.html">Tema 3</a>
-      <a href="./proCuatro.html">Tema 4</a>
-      <a href="./proCinco.html">Tema 5</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 5.- Gestión de ficheros</h1>
-    </div>
-  </header>
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#5.1">Concepto y tipos de ficheros</a></li>
-        <li><a href="#5.2">Diseño y modulación de las operaciones sobre ficheros</a></li>
-        <li><a href="#5.3">Operaciones sobre ficheros secuenciales</a></li>
-        <li><a href="#5.4">Control de excepciones</a></li>
-      </ol>
-    </div>
-  
+  </header> 
+  <main class="main--Apuntes">
     <a name="5.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
@@ -575,6 +555,6 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  </main>
 </body>
 </html>
