--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -12,42 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación I</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Programación I</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./programUno.html">Tema 1</a>
-      <a href="./proDos.html">Tema 2</a>
-      <a href="./proTres.html">Tema 3</a>
-      <a href="./proCuatro.html">Tema 4</a>
-      <a href="./proCinco.html">Tema 5</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 3.- Programación Estructurada</h1>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <section class="tema">
-    <div class="indice">     
-      <ul>
-        <li><a href="#3.1">Fundamentos de programación</a></li>
-        <li><a href="#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
-        <li><a href="#3.3">Ciclo de vida de un proyecto software</a></li>
-        <li><a href="#3.4">Prueba de programas</a></li>
-        <li><a href="#3.5">Tipos de datos: Simples y compuestos</a></li>
-        <li><a href="#3.6">Estructuras de selección (Condicionales)</a></li>
-        <li><a href="#3.7">Estructuras de repetición</a></li>
-        <li><a href="#3.8">Estructuras de salto</a></li>
-        <li><a href="#3.9">Tratamiento de cadenas</a></li>
-        <li><a href="#3.10">Depuración de errores</a></li>
-        <li><a href="#3.11">Documentación de programas</a></li>
-        <li><a href="#3.12">Entornos de desarrollo de programas</a></li>
-      </ul>
-    </div>
-  
+  <main class="main--Apuntes">
     <a name="3.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
@@ -721,6 +693,6 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  </main>
 </body>
 </html>
