--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -12,40 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación I</title>
 </head>
-<body class="apuntes">
+<body>
   <header>
-    <a name="top"></a>
     <div class="navtop">
-      <span>Programación I</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./programUno.html">Tema 1</a>
-      <a href="./proDos.html">Tema 2</a>
-      <a href="./proTres.html">Tema 3</a>
-      <a href="./proCuatro.html">Tema 4</a>
-      <a href="./proCinco.html">Tema 5</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 4.- Programación Modular</h1>
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header> 
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#4.1">Concepto</a></li>
-        <li><a href="#4.2">Ventajas e inconvenientes</a></li>
-        <li><a href="#4.3">Análisis descendente (top down)</a></li>
-        <li><a href="#4.4">Modulación de programas. Subprogramas</a></li>
-        <li><a href="#4.5">Llamadas a funciones (métodos). Tipos y funcionamiento</a></li>
-        <li><a href="#4.6">Ámbito de las llamadas a funciones</a></li>
-        <li><a href="#4.7">Prueba, depuración y comentario de programas</a></li>
-        <li><a href="#4.8">Concepto de librerías</a></li>
-        <li><a href="#4.9">Uso de librerías</a></li>
-        <li><a href="#4.10">Introducción al concepto de recursividad</a></li>
-      </ol>
-    </div>
-  
+  <main class="main--Apuntes">
     <a name="4.1"></a>
     <h3 class="subTitulo_3">Concepto</h3>
     <article class="articuloApuntes">
@@ -57,8 +31,6 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  
     <a name="4.2"></a>
     <h3 class="subTitulo_3">Ventajas e inconvenientes</h3>
     <article class="articuloApuntes">
@@ -424,6 +396,6 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  </main>
 </body>
 </html>
