--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -12,25 +12,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación I</title>
 </head>
-<body class="apuntes">
-  <header> <!-- HEADER -->
-    <a name="top"></a>
-    <div class="navtop"> <!-- BARRA SUPERIOR -->
-      <span>Programación I</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./programUno.html">Tema 1</a>
-      <a href="./proDos.html">Tema 2</a>
-      <a href="./proTres.html">Tema 3</a>
-      <a href="./proCuatro.html">Tema 4</a>
-      <a href="./proCinco.html">Tema 5</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 2.- Estructura de un programa informático</h1>
+<body>
+  <header>
+    <div class="navtop">
+        <a href="../proDos/indiceProDos.html">Programación II</a>
+        <a href="../../index.html">Principal</a>
     </div>
   </header>
-  <section class="tema">
+  <main class="main--Apuntes">
     <div class="indice">
       <ol>
         <li><a href="#2.1">Bloques de un programa de código</a></li>
@@ -435,6 +424,6 @@
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  </main>
 </body>
 </html>
