--- a/daw/proDos/proDosNueve.html
+++ b/daw/proDos/proDosNueve.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación II</title>
 </head>
-    <body class="apuntes">
+    <body>
         <header>
             <div class="navtop">
                 <a href="../proDos/indiceProDos.html">Programación II</a>
@@ -20,7 +20,7 @@
             </div>
         </header>
         <!-- Tema 9 -->
-        <section class="tema">
+        <main class="main--Apuntes">
             <div class="tituloTema">
                 <a href=""></a>
                 <div class="numeroTema">9</div>
@@ -62,6 +62,6 @@
                 <a href=""></a>
                 <h3>Expresiones regulares de búsqueda</h3>
             </article>
-        </section>
+        </main>
     </body>
 </html>
