--- a/daw/Len_Marcas/lenMarSiete.html
+++ b/daw/Len_Marcas/lenMarSiete.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Lenguajes de Marcas</title>
 </head>
-    <body class="apuntes">
+    <body>
         <header>
             <div class="navtop">
                 <a href="../Len_Marcas/indiceLen_Marcas.html">Lenguajes de marcas</a>
@@ -20,7 +20,7 @@
             </div>
         </header>
         <!-- Tema 7 -->
-        <section class="tema">
+        <main class="main--Apuntes">
             <div class="tituloTema">
                 <a href=""></a>
                 <div class="numeroTema">7</div>
@@ -54,6 +54,6 @@
                 <a href=""></a>
                 <h3>Integración con aplicaciones ofimáticas. Exportación de la información</h3>
             </article>
-        </section>
+        </main>
     </body>
 </html>
