--- a/daw/bdUno/bdUnoDos.html
+++ b/daw/bdUno/bdUnoDos.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Bases de Datos I</title>
 </head>
-    <body class="apuntes">
+    <body>
         <header>
             <div class="navtop">
                 <a href="../bdUno/indiceBdUno.html">Bases de Datos I</a>
@@ -20,7 +20,7 @@
             </div>
         </header>
         <!-- Tema 2 -->
-        <section class="tema">
+        <main class="main--Apuntes">
             <div class="tituloTema">
                 <a href=""></a>
                 <div class="numeroTema">2</div>
@@ -50,6 +50,6 @@
                 <a href=""></a>
                 <h3>Guía para la construcción de un modelo entidad-relación</h3>
             </article>
-        </section>
+        </main>
     </body>
 </html>
