--- a/daw/bdUno/bdUnoTres.html
+++ b/daw/bdUno/bdUnoTres.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Bases de Datos I</title>
 </head>
-    <body class="apuntes">
+    <body>
         <header>
             <div class="navtop">
                 <a href="../bdUno/indiceBdUno.html">Bases de Datos I</a>
@@ -20,7 +20,7 @@
             </div>
         </header>
         <!-- Tema 3 -->
-        <section class="tema">
+        <main class="main--Apuntes">
             <div class="tituloTema">
                 <a href=""></a>
                 <div class="numeroTema">3</div>
@@ -54,6 +54,6 @@
                 <a href=""></a>
                 <h3>Traducción del modelo entidad-relación al modelo relacional. Tipo 1:1. Tipo 1:N. Tipo N:M</h3>
             </article>
-        </section>
+        </main>
     </body>
 </html>
